@@ -14,13 +14,13 @@ libmonoarch_arm_la_SOURCES = $(BUILT_SOURCES) \
 	arm-dis.h
 
 arm_dpimacros.h: dpiops.sh mov_macros.th dpi_macros.th cmp_macros.th
-	bash $(srcdir)/dpiops.sh
+	(cd $(srcdir); bash ./dpiops.sh) > $@t
+	mv $@t $@
 
 arm_fpamacros.h: fpaops.sh fpam_macros.th fpa_macros.th
-	bash $(srcdir)/fpaops.sh
+	(cd $(srcdir); bash ./fpaops.sh) > $@t
+	mv $@t $@
 
 CLEANFILES = $(BUILT_SOURCES)
 
 EXTRA_DIST = dpiops.sh mov_macros.th dpi_macros.th cmp_macros.th fpam_macros.th fpa_macros.th arm-fpa-codegen.h fpaops.sh
-
-
