@@ -1,3 +1,9 @@
+2005-09-27  Raja R Harinath  <rharinath@novell.com>
+
+	* arm/dpiops.sh, arm/fpaops.h: Output to stdout.
+	* arm/Makefile.am (arm_dpimacros.h, arm_fpamacros.h): Update.  Fix
+	for srcdir != builddir.
+
 2005-09-11  Zoltan Varga  <vargaz@gmail.com>
 
 	* ia64/ia64-codegen.h (ia64_unw_pop_frames): New unwind macro.
